Add search user and detail user information

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="link_color">#277BC0</color>
     <color name="grey">#EFEFEF</color>
+    <color name="grey_loading">#DDDDDD</color>
+    <color name="dark_grey">#413F42</color>
 </resources>
