--- a/app/src/main/res/navigation/github_nav_graph.xml
+++ b/app/src/main/res/navigation/github_nav_graph.xml
@@ -9,5 +9,18 @@
         android:id="@+id/homeFragment"
         android:name="com.application.zaki.githubuser.presentation.home.view.HomeFragment"
         android:label="fragment_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home">
+        <action
+            android:id="@+id/action_homeFragment_to_detailUserFragment"
+            app:destination="@id/detailUserFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/detailUserFragment"
+        android:name="com.application.zaki.githubuser.presentation.detail.view.DetailUserFragment"
+        android:label="fragment_detail_user"
+        tools:layout="@layout/fragment_detail_user">
+        <argument
+            android:name="username"
+            app:argType="string" />
+    </fragment>
 </navigation>
