--- a/app/src/main/res/layout/fragment_following.xml
+++ b/app/src/main/res/layout/fragment_following.xml
@@ -6,6 +6,44 @@
     android:layout_height="match_parent"
     tools:context=".presentation.detail.view.FollowingFragment">
 
+    <com.facebook.shimmer.ShimmerFrameLayout
+        android:id="@+id/shimmer_placeholder"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <include layout="@layout/item_list_users_detail_placeholder" />
+
+            <include layout="@layout/item_list_users_detail_placeholder" />
+
+            <include layout="@layout/item_list_users_detail_placeholder" />
+
+            <include layout="@layout/item_list_users_detail_placeholder" />
+
+            <include layout="@layout/item_list_users_detail_placeholder" />
+
+            <include layout="@layout/item_list_users_detail_placeholder" />
+
+            <include layout="@layout/item_list_users_detail_placeholder" />
+
+            <include layout="@layout/item_list_users_detail_placeholder" />
+
+            <include layout="@layout/item_list_users_detail_placeholder" />
+
+            <include layout="@layout/item_list_users_detail_placeholder" />
+
+        </LinearLayout>
+
+    </com.facebook.shimmer.ShimmerFrameLayout>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_users_following"
         android:layout_width="0dp"
