--- a/app/src/main/res/layout/item_list_repository_placeholder.xml
+++ b/app/src/main/res/layout/item_list_repository_placeholder.xml
@@ -1,57 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="16dp">
 
     <TextView
         android:id="@+id/tv_repository_name"
-        android:layout_width="wrap_content"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
+        android:background="@color/grey_loading"
         android:fontFamily="@font/poppins_medium"
         android:textColor="@color/light_blue"
-        android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="Github-User" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tv_status_repository"
-        android:layout_width="wrap_content"
+        android:layout_width="50dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginTop="5dp"
-        android:background="@drawable/background_status_repository"
+        android:layout_marginEnd="10dp"
+        android:background="@color/grey_loading"
         android:fontFamily="@font/poppins_regular"
         android:paddingHorizontal="7dp"
         android:textColor="@color/grey_loading"
         android:textSize="9sp"
-        android:layout_marginEnd="10dp"
         app:layout_constraintStart_toEndOf="@id/tv_repository_name"
-        app:layout_constraintTop_toTopOf="@id/tv_repository_name"
-        tools:text="Public" />
+        app:layout_constraintTop_toTopOf="@id/tv_repository_name" />
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/img_circle"
         android:layout_width="10dp"
         android:layout_height="10dp"
-        android:src="@color/purple_200"
+        android:layout_marginTop="10dp"
+        android:src="@color/grey_loading"
         app:layout_constraintStart_toStartOf="@id/tv_repository_name"
         app:layout_constraintTop_toBottomOf="@id/tv_repository_name" />
 
     <TextView
         android:id="@+id/tv_language"
-        android:layout_width="wrap_content"
+        android:layout_width="60dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="7dp"
+        android:background="@color/grey_loading"
         android:fontFamily="@font/poppins_regular"
         android:textColor="@color/dark_grey"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="@id/img_circle"
         app:layout_constraintStart_toEndOf="@id/img_circle"
-        app:layout_constraintTop_toTopOf="@id/img_circle"
-        tools:text="Kotlin" />
+        app:layout_constraintTop_toTopOf="@id/img_circle" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
