--- a/app/src/main/res/layout/fragment_detail_user.xml
+++ b/app/src/main/res/layout/fragment_detail_user.xml
@@ -59,6 +59,7 @@
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:layout_marginStart="24dp"
+                android:transitionName="photo_profile"
                 android:layout_marginTop="32dp"
                 app:civ_border_color="@color/black"
                 app:civ_border_width="2dp"
