--- a/app/src/main/res/layout/item_list_favorite.xml
+++ b/app/src/main/res/layout/item_list_favorite.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:padding="16dp">
 
     <de.hdodenhof.circleimageview.CircleImageView
@@ -16,14 +16,25 @@
 
     <TextView
         android:id="@+id/tv_username_user"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:fontFamily="@font/poppins_medium"
         android:textSize="14sp"
+        android:layout_marginEnd="20dp"
         app:layout_constraintBottom_toBottomOf="@id/img_profile_user"
+        app:layout_constraintEnd_toStartOf="@id/img_favorite"
         app:layout_constraintStart_toEndOf="@id/img_profile_user"
         app:layout_constraintTop_toTopOf="@id/img_profile_user"
         tools:text="abdanzakialifian" />
+
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/img_favorite"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_favorite_filled_red_24"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
