--- a/app/src/main/res/navigation/github_nav_graph.xml
+++ b/app/src/main/res/navigation/github_nav_graph.xml
@@ -57,6 +57,9 @@
         <action
             android:id="@+id/action_favoriteFragment_to_homeFragment"
             app:destination="@id/homeFragment" />
+        <action
+            android:id="@+id/action_favoriteFragment_to_detailUserFragment"
+            app:destination="@id/detailUserFragment" />
     </fragment>
     <fragment
         android:id="@+id/splashScreenFragment"
