--- a/app/src/main/res/navigation/github_nav_graph.xml
+++ b/app/src/main/res/navigation/github_nav_graph.xml
@@ -53,10 +53,7 @@
         android:id="@+id/favoriteFragment"
         android:name="com.application.zaki.githubuser.presentation.favorite.view.FavoriteFragment"
         android:label="fragment_favorite"
-        tools:layout="@layout/fragment_favorite" >
-        <action
-            android:id="@+id/action_favoriteFragment_to_homeFragment"
-            app:destination="@id/homeFragment" />
+        tools:layout="@layout/fragment_favorite">
         <action
             android:id="@+id/action_favoriteFragment_to_detailUserFragment"
             app:destination="@id/detailUserFragment" />
@@ -65,9 +62,12 @@
         android:id="@+id/splashScreenFragment"
         android:name="com.application.zaki.githubuser.presentation.splash.SplashScreenFragment"
         android:label="fragment_splash_screen"
-        tools:layout="@layout/fragment_splash_screen" >
+        tools:layout="@layout/fragment_splash_screen">
         <action
             android:id="@+id/action_splashScreenFragment_to_homeFragment"
-            app:destination="@id/homeFragment" />
+            app:destination="@id/homeFragment"
+            app:launchSingleTop="true"
+            app:popUpTo="@id/splashScreenFragment"
+            app:popUpToInclusive="true" />
     </fragment>
 </navigation>
